# Robot

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/serial_node/: serial_msg.h
devel/lib/pkgconfig/: remote_ctrl_node.pc  robot_x1.pc  rplidar_ros.pc  serial_node.pc
devel/lib/python2.7/dist-packages/serial_node/msg/: __init__.py  _serial_msg.py
devel/lib/robot_x1/: robot_node
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/serial_node/: serial_node
devel/share/common-lisp/ros/serial_node/msg/: _package.lisp  _package_serial_msg.lisp  serial_msg.lisp  serial_node-msg.asd
devel/share/gennodejs/ros/serial_node/msg/: _index.js  serial_msg.js
devel/share/remote_ctrl_node/cmake/: remote_ctrl_nodeConfig.cmake
devel/share/robot_x1/cmake/: robot_x1Config.cmake
devel/share/roseus/ros/serial_node/: manifest.l
devel/share/roseus/ros/serial_node/msg/: serial_msg.l
devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
devel/share/serial_node/cmake/: serial_node-msg-paths.cmake  serial_nodeConfig.cmake
src/remote_ctrl_node/: CMakeLists.txt
src/remote_ctrl_node/src/: remote_ctrl_node.py
src/robot_x1/: CMakeLists.txt
src/robot_x1/launch/: robot_x1.launch  robot_x1_amcl.launch  robot_x1_navigation.launch  robot_x1_slam_gmapping.launch  rplidar.launch
src/robot_x1/maps/: map_01.yaml  mymap.pgm
src/robot_x1/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base_params.yaml  slam_gmapping.xml
src/robot_x1/src/: robot_node.cpp
src/serial_node/: CMakeLists.txt
src/serial_node/msg/: serial_msg.msg
src/serial_node/src/: serial_node.cpp
